
    gtimelog --toggle
        if GtimeLog already running, show or hide the GTimeLog window,
        otherwise launch a new application instance

    gtimelog
        if GtimeLog already running, bring the GTimeLog window to the front,
        otherwise launch a new application instance

  Contributed by Bruce van der Kooij (https://launchpad.net/~brucevdk),
  Fixes LP: #356495.


Changes in version 0.4.0 (released 2010-09-03)
==============================================

* Added configuration variable 'chronological' to control initial view of
  either Chronological (True) or Grouped (False).  Contributed by Barry Warsaw
  <barry@python.org> (LP: #628876)

* Recognize $GTIMELOG_HOME environment variable to use something other than
  ~/.gtimelog as the configuration directory.  Contributed by Barry Warsaw
  <barry@python.org> (LP: #628873)

* Changed application name to 'GTimeLog Time Tracker' in the desktop file
  (Debian #595280)


Changes in version 0.3.2 (released 2010-07-22)
==============================================

* Double-clicking a category in task list tries hard to focus the input box
  (fixes: https://bugs.launchpad.net/gtimelog/+bug/608734).

* Change default mailer to quote the command passed to x-terminal-emulator -e;
  this makes it work with Terminator (also tested with xterm and
  gnome-terminal).  Fixes https://bugs.launchpad.net/gtimelog/+bug/592552.

  Note: if you've used gtimelog before, you'll have to manually edit
  ~/.gtimelog/gtimelogrc and change the mailer line from

    mailer = x-terminal-emulator -e mutt -H %s

  to

    mailer = x-terminal-emulator -e "mutt -H %s"

* Use xdg-open by default for editing timelog.txt and opening spreadsheets.
  Fixes https://bugs.launchpad.net/gtimelog/+bug/592560.

  Note: if you've used gtimelog before, you'll have to manually edit
  ~/.gtimelog/gtimelogrc and change

    editor = gvim
    spreadhsheet = oocalc %s

  to

    editor = xdg-open
    spreadsheet = xdg-open %s

